<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Scott Weeden-Moody
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this project except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <string name="app_name">SWWM</string>

    <string name="activity_dialogs">Dialogs</string>
    <string name="activity_grid">Grids</string>
    <string name="activity_home">@string/app_name</string>

    <string name="content_desc_create_dialog">Create Dialog</string>
    <string name="content_desc_drawer_close">Drawer Close</string>
    <string name="content_desc_drawer_open">Drawer Open</string>

    <string name="loren_ipsum_short">Lorem ipsum dolor sit amet</string>

    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="cancelable">Cancelable</string>
    <string name="cancelable_on_touch_outside">Cancelable On Touch Outside</string>
    <string name="dialogs_get_started">Create a dialog to get started</string>
    <string name="embedded">Embedded</string>
    <string name="icon_not_supported">Icons Are Not Yet Supported</string>
    <string name="linkable">Linkable</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="negative_button">Negative Button</string>
    <string name="neutral_button">Neutral Button</string>
    <string name="positive_button">Positive Button</string>
    <string name="title">Title</string>

</resources>